[ROCM] Changes related to hipsparse build failure fix.

--- a/tensorflow/core/util/BUILD
+++ b/tensorflow/core/util/BUILD
@@ -732,6 +732,7 @@ tf_kernel_library(
         "@local_config_cuda//cuda:cub_headers",
     ]) + if_rocm([
         "//tensorflow/stream_executor/rocm:rocsolver_wrapper",
+        "//tensorflow/stream_executor/rocm:hipsolver_wrapper",
         "//tensorflow/stream_executor/rocm:hipsparse_wrapper",
     ]),
 )
